pkix: build the ERS sorted hash lists with a single sort rather than walking a LinkedList for each insertion point, compute a data group's hash in calculateHash() so it comes from the ERSCachingData cache, and build the generator's reduced hash tree leaves once