@@ -1,9 +1,10 @@
 package org.bouncycastle.tsp.ers;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 /**
  * A sorting list - byte[] are sorted in ascending order.
@@ -12,7 +13,7 @@ public class SortedHashList
 {
     private static final Comparator<byte[]> hashComp = new ByteArrayComparator();
 
-    private final LinkedList<byte[]> baseList = new LinkedList<byte[]>();
+    private final List<byte[]> baseList = new ArrayList<byte[]>();
 
     public SortedHashList()
     {
@@ -20,39 +21,30 @@ public class SortedHashList
 
     public byte[] getFirst()
     {
-        return (byte[])baseList.getFirst();
+        if (baseList.isEmpty())
+        {
+            throw new NoSuchElementException();
+        }
+
+        byte[] first = (byte[])baseList.get(0);
+
+        for (int i = 1; i != baseList.size(); i++)
+        {
+            byte[] next = (byte[])baseList.get(i);
+
+            // strictly less than, so the earliest added of a set of equal hashes is returned
+            if (hashComp.compare(next, first) < 0)
+            {
+                first = next;
+            }
+        }
+
+        return first;
     }
 
     public void add(byte[] hash)
     {
-        if (baseList.size() == 0)
-        {
-             baseList.addFirst(hash);
-        }
-        else
-        {
-            if (hashComp.compare(hash, baseList.get(0)) < 0)
-            {
-                baseList.addFirst(hash);
-            }
-            else
-            {
-                int index = 1;
-                while(index < baseList.size() && hashComp.compare(baseList.get(index), hash) <= 0)
-                {
-                    index++;
-                }
-
-                if (index == baseList.size())
-                {
-                    baseList.add(hash);
-                }
-                else
-                {
-                    baseList.add(index, hash);
-                }
-            }
-        }
+        baseList.add(hash);
     }
 
     public int size()
@@ -60,8 +52,19 @@ public class SortedHashList
         return baseList.size();
     }
 
+    /**
+     * Return the hashes added so far in ascending order.
+     * <p>
+     * The sort is stable, so hashes comparing equal come back in the order they were added in.
+     *
+     * @return a sorted list of the hashes added.
+     */
     public List<byte[]> toList()
     {
-        return new ArrayList<byte[]>(baseList);
+        List<byte[]> sorted = new ArrayList<byte[]>(baseList);
+
+        Collections.sort(sorted, hashComp);
+
+        return sorted;
     }
 }
